2012-07-13 Jesse Kornblum <research@jessekornblum.com>:

	* fuzzy.c: Fixed major bug regarding incorrect match scores for hashes with long filenames
	* dig.cpp: Added warning message when not all data on stdin was hashed. Also increased stdin buffer to 512MB.
	* configure.ac: Version bump to 2.9.
	* main.cpp: Added flags for clustering mode
	* ssdeep.h: Added flags for clustering mode
	* match.cpp: Setting up for clustering mode
	
2012-05-25 Jesse Kornblum <research@jessekornblum.com>:

	* main.cpp: Updated command line argument processing
	* ssdeep.1: Clarifications on description.

2012-05-24 Jesse Kornblum <research@jessekornblum.com>:

	* match.cpp: Convert to C++

2012-04-24 Jesse Kornblum <research@jessekornblum.com>:
	
	* ssdeep.1: Updating support for stdin, clarifying modes
        * Makefile.am: LF to CR/LF change now done by zip program
	* ssdeep.h: Adding Doxygen comments
	* match.cpp: Fixed bug in Win32 filename construction
	* fuzzy.h: Cleanup and commenting
	* engine.cpp: Added const definitions
	* Experimental conversion to C++
	* Commented out all references to clustering
	* main.cpp: Fixed some bugs in the command line argument processing

2012-04-15: Jesse Kornblum <research@jessekornblum.com>:

	* main.c: Fixed error handling in getopt processing
	
2012-02-16 Jesse Kornblum <research@jessekornblum.com>:

	* main.c: Bump copyright to 2012 in usage message. Add flag for clustering
	* main.h: Added mode_cluster
	* ui.c: Changed Win32 to use fputc instead of _tfprintf for filenames

2012-01-12 Jesse Kornblum <research@jessekornblum>:

	* ChangeLog: Clean up

2011-10-17 Jesse Kornblum <research@jessekornblum.com>:

	* configure.ac: Added AC_SYS_LARGEFILE to handle large files on 32-bit platforms. See bug 3416762.

2011-09-30 Jesse Kornblum <research@jessekornblum.com>:

	* ui.c: Redirected error messages to stderr instead of stdout
	* main.c: Added warning message when the program does not process any file large enough to produce meaningful results.
